<resources>
    <string name="app_name">QuizAlram</string>
    <string name="toast_1">그룹 추가</string>
    <string name="string1">알람 리스트</string>
    <string name="string2">편집</string>
    <string name="string3">추가</string>
    <string name="string4">완료</string>
    <string name="string5">알람 추가하기</string>
    <string name="string6">등록</string>
    <string name="string7">취소</string>
    <string name="string8">알람 제목</string>
    <string name="string9">알람</string>
    <string name="string10">벨 설정</string>
    <string name="string11">진동 설정</string>
    <string name="string12">요일 반복</string>
    <string name="string13">일</string>
    <string name="string14">월</string>
    <string name="string15">화</string>
    <string name="string16">수</string>
    <string name="string17">목</string>
    <string name="string18">금</string>
    <string name="string19">토</string>
    <string name="string20">간단 선택</string>
    <string name="string21">매일</string>
    <string name="string22">평일</string>
    <string name="string23">주말</string>
    <string name="string24">알람 문제 관리</string>
    <string name="string25">삭제</string>
    <string name="string26">문제 범위 설정</string>
    <string name="string27">전체 선택</string>
    <string name="string28">수학</string>
    <string name="string29">답</string>
    <string name="string30">비공개</string>
    <string name="string31">폴더 지정</string>
    <string name="string32">그룹 없음</string>
    <string name="string33">+추가하기</string>
    <string name="string34">문제</string>
    <string name="string35">정답</string>
    <string name="string36">80자 이내로 입력해주세요.</string>
    <string name="string37">최소 3자를 입력해주세요.</string>
    <string name="string38">문제 추가하기</string>
    <string name="string39">설정 화면</string>
    <string name="string40">○  배경 지정하기</string>
    <string name="string41">기본 배경 지정하기</string>
    <string name="string42">상단 배경 지정하기</string>
    <string name="string43">글자 색 변경하기</string>
    <string name="string44">기본 글자 색 변경하기</string>
    <string name="string45">상단 글자 색 변경하기</string>
    <string name="string46">확인</string>
    <string name="string47">기본 배경 지정</string>
    <string name="string48">상단 배경 지정</string>
    <string name="string49">기본 글자 색 변경</string>
    <string name="string50">상단 글자 색 변경</string>
    <string name="string51">글자</string>
    <string name="string52">기본 배경</string>
    <string name="string53">색 선택</string>
    <string name="string54">앨범에서 선택</string>
    <string name="string55">기본 색상</string>
    <string name="string56">수정</string>
    <string name="string57">정답 확인 후 알람 종료</string>
    <string name="string59">닫기</string>
    <string name="string60">추가할그룹명</string>
    <string name="string61">전체 선택 해제</string>
    <string name="string62">기본 벨소리</string>
    <string name="string63">무음</string>
    <string name="string64">잘못입력하셨습니다.</string>
</resources>
