<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/stroke"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:textColor="#000000"
            android:text="@string/string60"
            android:textStyle="bold"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/toast1_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="#000000"
            android:background="@drawable/stroke"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <Button
                android:id="@+id/no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string7" />
            <Button
                android:id="@+id/yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string3"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>