<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".main.MainActivity"
    android:orientation="vertical"
    android:gravity="top">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E7E7E7"
                android:padding="10dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/text_color_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string38"
                    android:textSize="23dp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_weight="1"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/text_color_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string31"
                        android:textSize="18dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/text_color_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="  :  "
                        android:textSize="18dp"
                        android:textStyle="bold"/>
                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <TextView
                        android:id="@+id/text_color_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string34"
                        android:textSize="18dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/text_color_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="  :  "
                        android:textSize="18dp"
                        android:textStyle="bold"/>
                    <EditText
                        android:id="@+id/set_quiz_edit1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/string36"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/text_color_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string35"
                        android:textSize="18dp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/text_color_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="  :  "
                        android:textSize="18dp"
                        android:textStyle="bold"/>
                    <EditText
                        android:id="@+id/set_quiz_edit2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/string37"
                        android:inputType="text"
                        android:imeOptions="actionDone"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="50dp"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/cancle_Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:background="#E7E7E7"
                        android:text="@string/string7"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:textSize="19dp"/>

                    <TextView
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:id="@+id/add_Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="10dp"
                        android:background="#E7E7E7"
                        android:text="@string/string6"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        android:textSize="19dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>